--- a/BitsoShell/BitsoShell.xcodeproj/xcshareddata/xcschemes/BitsoShell.xcscheme
+++ b/BitsoShell/BitsoShell.xcodeproj/xcshareddata/xcschemes/BitsoShell.xcscheme
@@ -26,8 +26,29 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BitsoKitTests"
+               BuildableName = "BitsoKitTests"
+               BlueprintName = "BitsoKitTests"
+               ReferencedContainer = "container:../BitsoKit">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BitsoUITests"
+               BuildableName = "BitsoUITests"
+               BlueprintName = "BitsoUITests"
+               ReferencedContainer = "container:../BitsoUI">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
