Create BistoKit and include Logger

--- a/BitsoShell/BitsoShell.xcodeproj/xcshareddata/xcschemes/BitsoShell.xcscheme
+++ b/BitsoShell/BitsoShell.xcodeproj/xcshareddata/xcschemes/BitsoShell.xcscheme
@@ -49,6 +49,16 @@
                ReferencedContainer = "container:../BitsoNet">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BitsoKitTests"
+               BuildableName = "BitsoKitTests"
+               BlueprintName = "BitsoKitTests"
+               ReferencedContainer = "container:../BitsoKit">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
