Create navigation module
Add a module that provides the utils required to manage navigation
across modules.

Creates the main app coordinator and its root view.

--- a/BitsoShell/BitsoShell.xcodeproj/xcshareddata/xcschemes/BitsoShell.xcscheme
+++ b/BitsoShell/BitsoShell.xcodeproj/xcshareddata/xcschemes/BitsoShell.xcscheme
@@ -59,6 +59,16 @@
                ReferencedContainer = "container:../BitsoKit">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BitsoNavTests"
+               BuildableName = "BitsoNavTests"
+               BlueprintName = "BitsoNavTests"
+               ReferencedContainer = "container:../BitsoNav">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
