--- a/BitsoBookModule/.swiftpm/xcode/xcshareddata/xcschemes/BitsoBookModule.xcscheme
+++ b/BitsoBookModule/.swiftpm/xcode/xcshareddata/xcschemes/BitsoBookModule.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "781EC20F2B8E37ED004A0757"
-               BuildableName = "BitsoShell.app"
-               BlueprintName = "BitsoShell"
-               ReferencedContainer = "container:BitsoShell.xcodeproj">
+               BlueprintIdentifier = "BitsoBookModule"
+               BuildableName = "BitsoBookModule"
+               BlueprintName = "BitsoBookModule"
+               ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,40 +33,10 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "BitsoUITests"
-               BuildableName = "BitsoUITests"
-               BlueprintName = "BitsoUITests"
-               ReferencedContainer = "container:../BitsoUI">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "BitsoNetTests"
-               BuildableName = "BitsoNetTests"
-               BlueprintName = "BitsoNetTests"
-               ReferencedContainer = "container:../BitsoNet">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "BitsoKitTests"
-               BuildableName = "BitsoKitTests"
-               BlueprintName = "BitsoKitTests"
-               ReferencedContainer = "container:../BitsoKit">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
                BlueprintIdentifier = "BitsoBookModuleTests"
                BuildableName = "BitsoBookModuleTests"
                BlueprintName = "BitsoBookModuleTests"
-               ReferencedContainer = "container:../BitsoBookModule">
+               ReferencedContainer = "container:">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -81,16 +51,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "781EC20F2B8E37ED004A0757"
-            BuildableName = "BitsoShell.app"
-            BlueprintName = "BitsoShell"
-            ReferencedContainer = "container:BitsoShell.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -98,16 +58,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "781EC20F2B8E37ED004A0757"
-            BuildableName = "BitsoShell.app"
-            BlueprintName = "BitsoShell"
-            ReferencedContainer = "container:BitsoShell.xcodeproj">
+            BlueprintIdentifier = "BitsoBookModule"
+            BuildableName = "BitsoBookModule"
+            BlueprintName = "BitsoBookModule"
+            ReferencedContainer = "container:">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
