Add test plans and documentation on testing

--- a/BitsoBookModule/.swiftpm/xcode/xcshareddata/xcschemes/BitsoBookModuleSnapshotTests.xcscheme
+++ b/BitsoBookModule/.swiftpm/xcode/xcshareddata/xcschemes/BitsoBookModuleSnapshotTests.xcscheme
@@ -14,7 +14,7 @@
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "RECORD_SNAPSHOTS"
-            value = "false"
+            value = "true"
             isEnabled = "YES">
          </EnvironmentVariable>
       </EnvironmentVariables>
